[tool.poetry]
name = "langgraph-cloud-quick-start"
version = "0.1.0"
description = ""
authors = ["Yohei <y.meguro.2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.7.3"
langgraph = "^0.2.45"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.6"
langgraph-sdk = "^0.1.35"

[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
